--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -110,3 +110,70 @@
   align-items: center;
   gap: 15px;
 }
+
+.results {
+  overflow-y: scroll;
+  max-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 0 5%;
+}
+
+.results::-webkit-scrollbar {
+  display: none;
+}
+
+.results .result-title {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.results img {
+  width: 50px;
+  border-radius: 50%;
+}
+
+.results .result-title {
+  font-size: 18px;
+  text-transform: capitalize;
+}
+
+.result-data {
+  display: flex;
+  align-items: start;
+  gap: 20px;
+}
+
+.loader {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.loader hr {
+  border-radius: 4px;
+  border: none;
+  background-color: #000;
+  background: linear-gradient(to right, #9ed7ff, #ffffff, #9ed7ff);
+  background-size: 800px 50px;
+  height: 20px;
+  animation: loader 3s infinite linear;
+}
+
+@keyframes loader {
+  0% {
+    background-position: -800px 0;
+  }
+  100% {
+    background-position: 800px 0;
+  }
+}
+
+.result-data p {
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 1.7;
+}
