--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -90,6 +90,7 @@
   background-color: #f0f4f9;
   padding: 10px 20px;
   border-radius: 50px;
+  margin-bottom: 15px;
 }
 .search-box img {
   width: 25px;
